--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "./"
     ],
     "license": "PHP",
+    "minimum-stability": "dev",
     "name": "pablodalloglio/ole",
     "support": {
         "issues": "http://pear.php.net/bugs/search.php?cmd=display&package_name[]=OLE",
